--- a/src/App.css
+++ b/src/App.css
@@ -47,19 +47,21 @@
 * {
   margin: 0px;
   padding: 0px;
-
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  background: var(--colorbg--);
-
+.body {
+  font-family: "Open Sans", sans-serif !important;
+  background: #ebe9e9;
 }
 
 header {
   width: 100%;
   height: 70px;
   background: #fff;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
 }
 
 header .logo {
@@ -262,3 +264,327 @@ header button.rounded-circle:hover svg {
   max-height: 300px;
   overflow-y: scroll;
 }
+
+/* sidebar css*/
+
+.main .sidebarWrapper {
+  width: 20%;
+  flex: 0 0 20%;
+  transition: all 0.3s ease-in-out;
+}
+
+.main .sidebarWrapper .sidebar {
+  width: 20%;
+  height: 100vh;
+  position: fixed;
+  max-height: calc(100% - 70px);
+  overflow: scroll;
+  overflow-x: hidden;
+  top: 70px;
+  left: 0px;
+  background: #fff;
+  padding-bottom: 40px;
+}
+
+.main .sidebarWrapper .sidebar::-webkit-scrollbar {
+  width: 6px !important;
+}
+
+.main .sidebarWrapper .sidebar::-webkit-scrollbar-thumb {
+  background: transparent !important;
+}
+
+.main .sidebarWrapper:hover .sidebar::-webkit-scrollbar {
+  background: var(--maincolor--) !important;
+}
+
+
+.main .sidebarWrapper .sidebar ul {
+  margin-bottom: 0px;
+  margin: 0px;
+  padding: 10px 15px;
+}
+
+.main .sidebarWrapper .sidebar ul li {
+  list-style: none;
+}
+
+.main .sidebarWrapper .sidebar ul li button {
+  color: rgba(0, 0, 0, 0.7) !important;
+  text-align: left;
+  justify-content: left;
+  border-radius: 10px;
+  padding: 12px 10px !important;
+  align-items: center;
+  text-transform: capitalize;
+  font-weight: 600;
+  font-size: 14px !important;
+  font-family: "Open Sans", sans-serif !important;
+}
+
+.main .sidebarWrapper .sidebar ul li button:hover {
+  background: #f1f1f1 !important;
+}
+
+.main .sidebarWrapper .sidebar ul li button.active {
+  background: #f1f1f1 !important;
+}
+
+
+
+.main .sidebarWrapper .sidebar ul li button .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+}
+
+.main .sidebarWrapper .sidebar ul li button .icon svg {
+  font-size: 22px;
+}
+
+.main .sidebarWrapper .sidebar ul li button * {
+  color: rgba(0, 0, 0, 0.7) !important;
+}
+
+.main .sidebarWrapper .sidebar ul li button .arrow {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  transition: all 0.3s ease-in-out;
+}
+
+.main .sidebarWrapper .sidebar ul li button.active .arrow {
+  transform: rotate(90deg);
+}
+
+.main .sidebarWrapper .sidebar ul .submenu {
+  padding: 0px 45px;
+  position: relative;
+}
+
+.main .sidebarWrapper .sidebar ul .submenu::before {
+  content: '';
+  width: 1px;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 25px;
+  background: rgba(0, 0, 0, 0.2);
+
+}
+
+.main .sidebarWrapper .sidebar ul .submenu li {
+  width: 100%;
+  list-style: none;
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.main .sidebarWrapper .sidebar ul .submenu li a {
+  color: rgba(0, 0, 0, 0.7) !important;
+  text-decoration: none;
+  display: block;
+  font-weight: 500;
+  font-size: 14px;
+  transition: all 0.2s;
+  padding: 6px 0px;
+  transition: all 0.3s;
+
+}
+
+.main .sidebarWrapper .sidebar ul .submenu li a:hover {
+  color: var(--maincolor--) !important;
+}
+
+.main .sidebarWrapper .sidebar ul .submenuWrapper {
+  transition: all 0.4s;
+  overflow: hidden;
+
+}
+
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapsed {
+  height: 0px;
+}
+
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapsed .submenu {
+  opacity: 0;
+}
+
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapse {
+  height: auto;
+  overflow: inherit;
+  opacity: 1;
+  padding: 10px 0px;
+}
+
+.main .sidebarWrapper .sidebar ul .submenuWrapper.colapse .submenu {
+  opacity: 1;
+  height: auto;
+}
+
+.logoutWrapper {
+  padding: 0px 25px;
+}
+
+.logoutWrapper .logoutBox {
+  width: 100%;
+  height: 100px;
+  padding: 25px;
+  background: #bcd2fd;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.logoutWrapper .logoutBox::before {
+  content: '';
+  width: 70px;
+  height: 70px;
+  background: var(--maincolor--);
+  border-radius: 100%;
+  position: absolute;
+  top: -20px;
+  opacity: 0.5;
+  right: -20px;
+}
+
+.logoutWrapper .logoutBox::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  background: var(--maincolor--);
+  border-radius: 100%;
+  position: absolute;
+  top: 20px;
+  opacity: 0.5;
+  left: 10px;
+}
+
+.logoutWrapper .logoutBox button {
+  font-size: 14px !important;
+  font-weight: 600 !important;
+}
+
+.logoutWrapper .logoutBox button svg {
+  margin-right: 5px;
+  font-size: 18px !important;
+}
+
+/*Right content*/
+.main .content {
+  width: 80%;
+  flex: 0 0 80%;
+}
+
+.right-content {
+  padding: 90px 30px;
+}
+
+.dashboardBoxWrapper {
+  gap: 20px;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.dashboardBoxWrapper .dashboardBox {
+  width: 32%;
+  height: 200px;
+  background: #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: left !important;
+  position: relative;
+  color: #fff;
+}
+
+.dashboardBoxWrapper .dashboardBox .col1 h4 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+
+.dashboardBoxWrapper .dashboardBox .col1 span {
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 45px;
+}
+
+.dashboardBoxWrapper .dashboardBox .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+}
+
+.dashboardBoxWrapper .dashboardBox .icon svg {
+  font-size: 25px;
+  opacity: 0.4;
+  color: #fff;
+}
+
+.dashboardBoxWrapperRow .box {
+  width: 100%;
+  height: 100%;
+  background: #1e5dd0;
+}
+
+.innerDashbox {
+  display: flex;
+  width: 100%;
+}
+
+.innerDashboxIcon {
+  margin-left: auto;
+}
+
+.innerDashboxDate {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  top: 25px;
+}
+
+.innerDashboxDate h5 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.innerDashboxDate .toggleIcon{
+  margin-left: auto;
+  font-size: 22px;
+  color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  min-width: 40px !important;
+  width: 40px !important;
+  height: 40px !important;
+
+}
+.dashboardBox .chart{
+ opacity: 0.1;
+ position: absolute;
+ bottom: 20px;
+ left: 20px;
+}
+.dashboardBoxWrapper .dashboardBox .chart svg{
+  color: #000;
+  font-size:110px;
+  color:#000;
+ }
+ 
